small alignment issues on mobile fixed

--- a/lesson06/assignment/css/style.scss
+++ b/lesson06/assignment/css/style.scss
@@ -85,7 +85,6 @@ footer {grid-area: footer;}
 // Home Page
 
 .news-card {
-  width: 100%;
   height: auto;
   padding: 1rem;
   border-radius: 1rem;
@@ -99,6 +98,11 @@ footer {grid-area: footer;}
     width: 100%;
     height: 100%;
   }
+}
+
+main {
+  max-width: 100vw;
+  padding: 1.5rem;
 }
 
 // Discovery Page.  This is just a placeholder for the eventual API component, but with some random responsive divs to demonstrate my understanding of Bootstrap grid, because I don't think I used 3 breakpoints anywhere else on the site.
